--- a/my-app/src/app/products/product-list/product-list.component.html
+++ b/my-app/src/app/products/product-list/product-list.component.html
@@ -1,1 +1,60 @@
-<p>product-list works!</p>
+<div class="card-container" style="justify-content: initial;">
+  <mat-form-field style="margin-top: 10px">
+    <mat-label>Search </mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
+  <i class="material-icons" style="line-height: 3; font-size: 25px; margin-left: -30px;">search</i>
+</div>
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </th>
+      <td mat-cell *matCellDef="let row">
+        <img src='{{row.imageUrl}}' alt="{{row.name}}" style="padding: 5px; height: 200px; width: 300px;">
+        <span style="font-size: 30px; padding-left: 10px;">{{row.name}} ({{row.code}})</span>
+      </td>
+    </ng-container>
+
+    <!-- Rating Column -->
+    <ng-container matColumnDef="rating">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
+      <td mat-cell *matCellDef="let row">
+        <button style="width: 20px;" mat-icon-button *ngFor="let ratingId of ratingArr;index as i"
+          [id]="'star_'+i" [matTooltip]="ratingId+1" matTooltipPosition="above">
+          <mat-icon style="color: #ffd740;">
+            {{showIcon(i, row.rating)}}
+          </mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Price Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+      <td mat-cell *matCellDef="let row"> {{row.price |currency:'INR':'symbol'}} </td>
+    </ng-container>
+
+    <!-- Cart Column -->
+    <ng-container matColumnDef="cart">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Add to Cart </th>
+      <td mat-cell *matCellDef="let row">
+        <a class="button" (click)="addToCart()">
+          <i style="cursor: pointer; font-size: 40px;" class="material-icons">add_shopping_cart</i>
+        </a>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
+
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
